# lambda

./: -  .alint.yml  .clang-tidy  .gitattributes  .gitignore  .gitmodules  AGENTS.md  BENCHMARK_QUICK_REFERENCE.txt  BENCHMARK_RESULTS.md  CLAUDE.md  COMPILATION.md  Claude.md  Dockerfile.test-linux  Dom_Refactor.md  Enhanced_Test.md  Flexbox_Enhancement.md  Implementation_Summary.md  Layout_Baseline.md  Makefile  Makefile.hashmap_cpp  Makefile.klee  Markup_Parser.md  PDF_Writer.md  PREMAKE_BUILD.md  Parser_Debug.md  Phase3_Implementation_Summary.md  Port_Parser.md  README.md  Radiant_Memory_Issues.md  Robust_Expr.md  Robust_Lambda.md  Robust_Lambda_S2.md  Robust_Lambda_S3.md  SCHEMA_PARSER_CHANGES.md  String_Pattern_Imp.md  TYPESET_IMPLEMENTATION_SUMMARY.md  Test.md  WASM-JS.md  WINDOWS_BUILD.md  WINDOWS_NATIVE_BUILD.md  (+162 more)
lambda/tree-sitter-lambda/: Cargo.toml  Makefile  Package.swift  binding.gyp  example-script.ls  grammar-bracketed-expr.js  grammar-mark.js  grammar.js  pyproject.toml  setup.py  tree-sitter.json
lambda/tree-sitter-lambda/bindings/go/: binding.go  binding_test.go
lambda/tree-sitter-lambda/src/: grammar.json  node-types.json  scanner.c
utils/: BINARY_SIZE_ANALYSIS_REPORT.md  CMakeLists.txt  Printf_Migration.md  README.md  Refactor_Tool.md  add_source_loc.py  advanced_binary_analysis.sh  analyze_binary.py  analyze_binary_size.sh  analyze_extended_tests.py  analyze_js_mir.py  analyze_size.sh  apply_ai_replacements.sh  benchmark_compile.sh  build_core.sh  build_refactor_tool.sh  build_utils.sh  check_gc_effects.py  check_gc_root_hazards.py  check_hosted_python_architecture.py  check_module_boundary.py  check_state_machine.py  check_static_module_architecture.py  check_string_scans.py  compare_dvi.cpp  compare_dvi_output.py  compare_latexjs_latexml.py  convert_math_fixtures.js  convert_yoga_fixtures.js  count_loc.sh  differential_analysis.sh  empty.cpp  enumerate_sources.py  extract_font_metrics.py  extract_for_ai.sh  extract_mathlive_tests.py  extract_wpt_tests.py  generate_graphics_refs.sh  generate_html5_entities.py  generate_hybrid_refs.py  (+45 more)
utils/devtool/: .gitignore  main.js  package.json  preload.js
utils/devtool/src/: App.jsx
utils/downloader/: README.md  download-page.js
utils/layout-devtool/: README.md  index.html  main.js  package.json  preload.js  setup.sh
utils/layout-devtool/src/: App.jsx
utils/lint/: manifest.yml  manifest_check.sh  run.sh
utils/lint/dead-code/: run_unused_function.sh  sgconfig.yml  test_unused_function.sh
utils/lint/tidy/: explicit_cast_check.py  run_tidy.sh
(+17828 files in other folders)
